--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,6 +44,7 @@
             app:layout_constraintTop_toBottomOf="@id/iv_user_profile" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_edit_profile"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
