--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -25,6 +25,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <LinearLayout
+            android:id="@+id/ly_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_change_profile">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_user_profile"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:src="@color/white"
+                app:civ_border_color="@color/bluePrimary"
+                app:civ_border_width="1dp" />
+
+        </LinearLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layout_input_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -34,7 +55,7 @@
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_change_profile"
+            app:layout_constraintTop_toBottomOf="@id/ly_photo"
             app:startIconDrawable="@drawable/ic_person_black_24dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -93,92 +114,88 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layout_input_password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/layout_input_password"-->
+<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            app:endIconMode="password_toggle"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/layout_input_phone"-->
+<!--            app:startIconDrawable="@drawable/ic_password_black_24dp">-->
+
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/tv_value_password_profile"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:hint="@string/value_password_register"-->
+<!--                android:inputType="textPassword" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
+
+        <TextView
+            android:id="@+id/tv_upload_image"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:endIconMode="password_toggle"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Unggah Foto"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layout_input_phone"
-            app:startIconDrawable="@drawable/ic_password_black_24dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tv_value_password_profile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:backgroundTint="@color/white"
-                android:hint="@string/value_password_register"
-                android:inputType="textPassword" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            app:layout_constraintTop_toBottomOf="@id/layout_input_phone" />
 
         <LinearLayout
             android:id="@+id/layout_pic_image"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/tv_upload_image"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_upload_image"
             android:gravity="center"
-            android:background="@drawable/bg_upload_image">
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_upload_image">
 
             <ImageView
                 android:id="@+id/img_user"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_pict_image"
-                />
+                android:src="@drawable/ic_pict_image" />
 
             <Button
                 android:id="@+id/btn_choose_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:paddingHorizontal="36dp"
                 android:layout_marginStart="16dp"
+                android:paddingHorizontal="36dp"
+                android:text="Pilih"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_gravity="bottom"
                 app:backgroundTint="@color/bluePrimary"
-                app:cornerRadius="15dp"
-                android:text="Pilih"
-                android:layout_marginEnd="16dp"/>
+                app:cornerRadius="15dp" />
 
         </LinearLayout>
-        <TextView
-            android:id="@+id/tv_upload_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Unggah Foto"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/layout_input_password"
-            app:layout_constraintStart_toStartOf="parent"/>
 
         <Button
             android:id="@+id/btn_submit"
-            android:text="Unggah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:paddingHorizontal="36dp"
             android:paddingVertical="8dp"
+            android:text="Unggah"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:backgroundTint="@color/bluePrimary"
             app:cornerRadius="15dp"
-            app:layout_constraintTop_toBottomOf="@id/layout_pic_image"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/layout_pic_image" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
