replace status sandbox of midtrans to production of midtrans, replace asset home fragment, search vendor, detail vendor, and add slider images

--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -20,7 +20,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="103dp"
-            android:background="@drawable/bg_motorcycle">
+            android:background="@drawable/img_washing_service">
 
             <ToggleButton
                 android:id="@+id/btn_like"
