--- a/app/src/main/res/layout/activity_detail_vendor.xml
+++ b/app/src/main/res/layout/activity_detail_vendor.xml
@@ -11,7 +11,7 @@
         android:id="@+id/img_motorcycle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_motorcycle">
+        android:background="@drawable/img_main_service">
 
         <ImageButton
             android:id="@+id/btn_back"
@@ -27,8 +27,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:alpha="0.5"
-            android:background="@color/bluePrimary"
             android:orientation="vertical" >
 
         <com.google.android.material.textview.MaterialTextView
@@ -39,6 +37,7 @@
             android:layout_marginEnd="8dp"
             android:layout_gravity="end|center_horizontal"
             android:text="@string/txt_example_washer"
+            android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -49,6 +48,7 @@
             android:layout_gravity="end|center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:textStyle="bold"
             android:text="@string/txt_example_washer_address"
             android:textColor="@color/white"
             android:textSize="14sp" />
@@ -64,6 +64,7 @@
             android:drawableEnd="@drawable/ic_map_white_24dp"
             android:elevation="4dp"
             android:text="@string/txt_look_washer_map"
+            android:textStyle="bold"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="12sp"
