add support activity

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -86,6 +86,7 @@
                 android:background="@color/bluePrimary" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_support"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
