--- a/appmitra/src/main/res/layout/item_service.xml
+++ b/appmitra/src/main/res/layout/item_service.xml
@@ -17,6 +17,7 @@
         android:textStyle="bold" />
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_detail"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
@@ -38,46 +39,46 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:weightSum="3">-->
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="16dp"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:weightSum="3">-->
 
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:id="@+id/btn_service_confirm"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginEnd="4dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:hint="@string/service_confirm"-->
-<!--            android:textColorHint="@color/white"-->
-<!--            app:backgroundTint="@color/md_green_400"-->
-<!--            app:cornerRadius="100dp" />-->
+    <!--        <com.google.android.material.button.MaterialButton-->
+    <!--            android:id="@+id/btn_service_confirm"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginEnd="4dp"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:hint="@string/service_confirm"-->
+    <!--            android:textColorHint="@color/white"-->
+    <!--            app:backgroundTint="@color/md_green_400"-->
+    <!--            app:cornerRadius="100dp" />-->
 
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:id="@+id/btn_service_laet"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginEnd="4dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:hint="@string/service_late"-->
-<!--            android:textColorHint="@color/white"-->
-<!--            app:backgroundTint="@color/md_grey_400"-->
-<!--            app:cornerRadius="100dp" />-->
+    <!--        <com.google.android.material.button.MaterialButton-->
+    <!--            android:id="@+id/btn_service_laet"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginEnd="4dp"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:hint="@string/service_late"-->
+    <!--            android:textColorHint="@color/white"-->
+    <!--            app:backgroundTint="@color/md_grey_400"-->
+    <!--            app:cornerRadius="100dp" />-->
 
-<!--        <com.google.android.material.button.MaterialButton-->
-<!--            android:id="@+id/btn_service_cancel"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:hint="@string/service_cancel"-->
-<!--            android:textColorHint="@color/white"-->
-<!--            app:backgroundTint="@color/md_red_700"-->
-<!--            app:cornerRadius="100dp" />-->
+    <!--        <com.google.android.material.button.MaterialButton-->
+    <!--            android:id="@+id/btn_service_cancel"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:hint="@string/service_cancel"-->
+    <!--            android:textColorHint="@color/white"-->
+    <!--            app:backgroundTint="@color/md_red_700"-->
+    <!--            app:cornerRadius="100dp" />-->
 
-<!--    </LinearLayout>-->
+    <!--    </LinearLayout>-->
 
     <View
         android:layout_width="match_parent"
