change home bg color to grey

--- a/appmitra/src/main/res/layout/activity_main.xml
+++ b/appmitra/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/lnr_hello"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primaryColor"
+        android:background="@color/md_grey_600"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="20dp">
