--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -108,6 +108,7 @@
                     android:background="@color/bluePrimary" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_terms_condition"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
